[Thiago] kqVyRyNO fixes icon display on firefox

--- a/themes/main/src/sass/post.scss
+++ b/themes/main/src/sass/post.scss
@@ -101,7 +101,7 @@
 
   .share-icon {
     margin: 0.4rem;
-    max-width: 2.2rem;
+    width: 2.2rem;
   }
 }
 
